@@ -52,14 +52,14 @@ ACE_Filecache_Handle::init (void)
 }
 
 ACE_Filecache_Handle::ACE_Filecache_Handle (void)
-  : file_ (0), handle_ (0), mapit_ (0)
+  : file_ (0), handle_ (0)
 {
   this->init ();
 }
 
 ACE_Filecache_Handle::ACE_Filecache_Handle (const ACE_TCHAR *filename,
                                             ACE_Filecache_Flag mapit)
-  : file_ (0), handle_ (0), mapit_ (mapit)
+  : file_ (0), handle_ (0)
 {
   this->init ();
   // Fetch the file from the Virtual_Filesystem let the
@@ -72,8 +72,8 @@ ACE_Filecache_Handle::ACE_Filecache_Handle (const ACE_TCHAR *filename,
 
 ACE_Filecache_Handle::ACE_Filecache_Handle (const ACE_TCHAR *filename,
                                             int size,
-                                            ACE_Filecache_Flag mapit)
-  : file_ (0), handle_ (0), mapit_ (mapit)
+                                            ACE_Filecache_Flag )
+  : file_ (0), handle_ (0)
 {
   this->init ();
 
@@ -691,7 +691,7 @@ ACE_Filecache_Object::error (void) const
 int
 ACE_Filecache_Object::error_i (int error_value, const ACE_TCHAR *s)
 {
-  s = s;
+  ACE_UNUSED_ARG (s);
   ACELIB_ERROR ((LM_ERROR, ACE_TEXT ("%p.\n"), s));
   this->error_ = error_value;
   return error_value;
