@@ -146,8 +146,6 @@ private:
 
   /// A dup'd version of the one from file_.
   ACE_HANDLE handle_;
-
-  int mapit_;
 };
 
 typedef ACE_Hash_Map_Manager_Ex<const ACE_TCHAR *, ACE_Filecache_Object *, ACE_Hash<const ACE_TCHAR *>, ACE_Equal_To<const ACE_TCHAR *>, ACE_Null_Mutex>
