@@ -1,3 +1,13 @@
+Wed Jun 19 22:33:03 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * ace/Filecache.h:
+        * ace/Filecache.cpp:
+        * ace/config-macosx-lion.h:
+
+        * apps/gperf/src/List_Node.cpp:
+
+          Clean up warnings on various nightly builds.
+
 Tue Jun 18 07:16:22 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Compiler_Features_21_Test.cpp:
